2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03447] Re: Open download list panel on new tab
	* main.c (download_action): buffer management deleted
		(ldDL): buffer management moved here

2002-11-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: rc: open_tab_dl_list

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03446] Open download list panel on new tab
	* fm.h (open_tab_dl_list): added
	* main.c (download_action): buffer delete when download done
		(ldDL): open buf in new tab if open_tab_dl_list
	* rc.c (CMT_OPEN_TAB_DL_LIST): added
		(open_tab_dl_list): added

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03445] download list for "w3m foo.tar.gz"
	* main.c (main): display download list

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03443] Can't display "echo only_one_line | w3m"
	* display.c (redrawNLine): check 1st line

2002-11-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03442] Re: setting form on loading
	* form.c (preFormUpdateBuffer): ifdef MENU_SELECT

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03441] charset of save file
	* file.c (_doFileCopy): use conv_from_system()
		(doFileSave): conv_from_system()
	* main.c (DownloadListBuffer): conv_from_system()

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03440] Re: restore alarm event
	* fm.h (BP_RELOAD): added
		(DOWNLOAD_LIST_TITLE): added
	* main.c (main): if BP_RELOAD, do reload
		(reload): if buffer is DOWNLOAD_LIST, ldDL()
		(DownloadListBuffer): rewrite with DOWNLOAD_LIST_TITLE
		(download_action): delete "update"
				don't delete prev buffer
		(ldDL): rewrite to do reload

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03439] restore alarm event
	* fm.h (AL_RESTORE): added
	* main.c (alarm_sec): deleted
		(alarm_status): deleted
		(alarm_buffer): deleted
		(alarm_event): deleted
		(AlarmEvent): added
		(CurrentAlarm): added