@@ -12,7 +12,6 @@ w3m
 w3mbookmark
 w3mhelperpanel
 w3mimgdisplay
-w3mimgsize
 version.c
 w3mhelp-lynx_en.html
 w3mhelp-lynx_ja.html
