@@ -5,5 +5,4 @@ w3mhelp-funcdesc.en.pl
 w3mhelp-funcdesc.ja.pl
 w3mhelp-funcname.pl
 w3mhelp-funcdesc-stamp
-xface2xbm
 xface2xpm
